--- a/doc/context/sources/general/fonts/fonts/fonts-features.tex
+++ b/doc/context/sources/general/fonts/fonts/fonts-features.tex
@@ -891,7 +891,7 @@ one never knows what to expect.
 
 How do we know what faces add up to the ligature {\emoji\Man \zwj \Woman \zwj
 \Girl \zwj \Boy} and how are we supposed to know that there should {\darkgray
-\type {zwj}} in between? When we input four faces seoarated by zero width
+\type {zwj}} in between? When we input four faces separated by zero width
 joiners, we get a four face symbol instead. The reason for having the joiners in
 between is probably to avoid unexpected ligatures. The sequence \type {man},
 \type {woman}, \type {boy}, \type {boy} gives \type {family}:
