--- a/doc/context/sources/general/manuals/luatex/luatex-nodes.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-nodes.tex
@@ -1618,6 +1618,9 @@ The next call will return 5 values (or northing when no glue is passed).
     <integer> shrink_order = node.getglue(<node> n)
 \stopfunctioncall
 
+When the second argument is false, only the width is returned (this is consistent
+with \type {tex.get}).
+
 \subsubsection{\type {node.is_zero_glue}}
 
 This function returns \type {true} when the width, stretch and shrink properties
@@ -1807,7 +1810,7 @@ If performance matters you can use an function instead:
 \NC getfont    \NC used a lot in \OPENTYPE\ handling (glyph nodes are consulted a lot) \NC \NR
 \NC getchar    \NC idem and also in other places \NC \NR
 \NC getwhd     \NC returns the \type {width}, \type {height} and \type {depth} of a list, rule or
-                   (unexpanded) glyph \NC \NR
+                   (unexpanded) glyph as well as glue (its spec is looked at) and unset nodes\NC \NR
 \NC getdisc    \NC returns the \type {pre}, \type {post} and \type {replace} fields and
                    optionally when true is passed also the tail fields. \NC \NR
 \NC getlist    \NC we often parse nested lists so this is a convenient one too
