--- a/doc/context/sources/general/manuals/luatex/luatex-fonts.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-fonts.tex
@@ -469,7 +469,7 @@ parameters to that command. The allowed commands and their arguments are:
 \NC right   \NC 1   \NC number    \NC move right on the page\NC\NR
 \NC special \NC 1   \NC string    \NC output a \type {\special} command\NC\NR
 \NC pdf     \NC 2   \NC 2 strings \NC output a \PDF\ literal, the first string is one of \type {origin},
-                                      \type {page{, \type {direct} or \type {raw}\NC\NR
+                                      \type {page}, \type {direct} or \type {raw}\NC\NR
 \NC lua     \NC 1   \NC string    \NC execute a \LUA\ script (at \type {\latelua} time)\NC\NR
 \NC image   \NC 1   \NC image     \NC output an image (the argument can be either an \type
                                       {<image>} variable or an \type {image_spec} table)\NC\NR
