--- a/doc/context/sources/general/manuals/workflows/workflows-synctex.tex
+++ b/doc/context/sources/general/manuals/workflows/workflows-synctex.tex
@@ -6,7 +6,7 @@
 
 \logo [SYNCTEX]  {Sync\TeX}
 
-\startchapter[title=\SYNCTEX\]
+\startchapter[title=\SYNCTEX]
 
 \startsection[title=Introduction]
 
@@ -26,7 +26,7 @@ lists of glyphs, kerns, glue, boxes, rules etc. These elements are called nodes.
 Some nodes carry information about the file and line where they were created. In
 the backend this information gets somehow translated in a (sort of) verbose tree
 that describes the makeup in terms of boxes, glue and kerns. From that
-information the \SYNCTEX\ parser library, hooked into a pdf viewer, can go back
+information the \SYNCTEX\ parser library, hooked into a \PDF\ viewer, can go back
 from a position on the screen to a line in a file. One would expect this to be a
 relative simple rectangle based model, but as far as I can see it's way more
 complex than that. There are some comments that \CONTEXT\ is not supported well
@@ -60,14 +60,14 @@ editor} are the following:
 \startitem
     Users should not be able to reach environments (styles) and other files
     loaded from the (normally read|-|only) \TEX\ tree, like modules. We don't
-    want accidental changed in such files.
+    want accidental changes in such files.
 \stopitem
 
 \startitem
     We not only have \TEX\ files but also \XML\ files and these can normally
-    flushed in rather arbitrary ways. Although the concept of lines is sort of
+    flush in rather arbitrary ways. Although the concept of lines is sort of
     lost in such a file, there is still a relation between lines and the snippets
-    that make of the content of an \XML\ node.
+    that make out the content of an \XML\ node.
 \stopitem
 
 \startitem
@@ -125,7 +125,7 @@ text is flushed as a stream, specific elements can be flushed out of order. In
 educational documents flushing for instance answers to exercises can happen out of
 order. In that case we still need to make sure that we go to the right spot in
 the file. It will never be 100\% perfect but it's better than nothing. The
-above command will also enable \XML support.
+above command will also enable \XML\ support.
 
 If you don't want a file to be accessed, you can block it:
 
