--- a/doc/context/sources/general/manuals/math/math-introduction.tex
+++ b/doc/context/sources/general/manuals/math/math-introduction.tex
@@ -9,6 +9,10 @@ collection of wrap|-|ups. The file also serves as testcase. The content can
 change over time and can also serve as a trigger for discussions on the mailing
 list. Suggestions are welcome.
 
+We discuss high level as well as low level commands. Some of the low level
+commands (primitives) are wrapped in high level commands but you can of course
+always revert to bare \TEX.
+
 % https://www.youtube.com/watch?v=SB8_2Yuj8Og
 % youtube: Mathematics - Hollie + Metropole Orkest (conducted by Jules Buckley)
 
