--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -23,6 +23,8 @@
 % "context --nodates --nocompression luatex" can be used for comparison
 % runs, not that we do it
 
+% \enabledirectives[hyphenator.flatten]
+
 \environment luatex-style
 \environment luatex-logos
 
