--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -16,6 +16,8 @@
 % comment   : Some chapters might have been published in TugBoat, the NTG Maps, the ConTeXt
 %             Group journal or otherwise. Thanks to the editors for corrections. Also thanks
 %             to users for testing, feedback and corrections.
+%
+% 238 pages : 2017-07-06 / 9.5 sec (7.0 sec jit) / Dell 7600 i7 3840QM / Windows 10 64 bit
 
 % \tex vs \type vs \syntax vs. \luatex
 % \em \it \/
