--- a/doc/context/sources/general/manuals/spacing/spacing-mkiv.tex
+++ b/doc/context/sources/general/manuals/spacing/spacing-mkiv.tex
@@ -28,6 +28,7 @@
 
     \startbodymatter
         \component spacing-linecorrection
+        \component spacing-periods
     \stopbodymatter
 
 \stopdocument
