--- a/doc/context/sources/general/manuals/math/math-mkiv.tex
+++ b/doc/context/sources/general/manuals/math/math-mkiv.tex
@@ -36,6 +36,7 @@
     \component math-numbering
     \component math-combining
     \component math-features
+    \component math-alignments
     \component math-suboptimal
     \component math-tricks
 \stopbodymatter
