--- a/doc/context/sources/general/manuals/spacing/spacing-style.tex
+++ b/doc/context/sources/general/manuals/spacing/spacing-style.tex
@@ -54,4 +54,11 @@
   [style=\bfc,
    color=maincolor]
 
+\setuphead
+  [subsubsection]
+  [style=bold,
+   color=maincolor,
+   before=\blank,
+   after=\blank]
+
 \stopenvironment
