--- a/doc/context/sources/general/manuals/math/math-mkiv.tex
+++ b/doc/context/sources/general/manuals/math/math-mkiv.tex
@@ -31,6 +31,8 @@
 \stopfrontmatter
 
 \startbodymatter
+    \component math-input
+    \component math-definitions
     \component math-spacing
     \component math-framing
     \component math-numbering
