--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -1,5 +1,7 @@
 % macros=mkvi
 
+% \disabledirectives[vspacing.resetprevdepth]
+
 % author    : Hans Hagen with Taco Hoekwater, Luigi Scarso & Hartmut Henkel
 % copyright : PRAGMA ADE & ConTeXt Development Team
 % license   : Creative Commons Attribution ShareAlike 4.0 International
@@ -45,7 +47,7 @@
 
 \startdocument
   [status=experimental,
-   version=1.07.0]
+   version=1.08.0]
 
 \startnotmode[*export]
     \component luatex-titlepage
