--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -1,6 +1,6 @@
 % macros=mkvi
 
-% \disabledirectives[vspacing.resetprevdepth]
+% \disabledirectives[vspacing.synchronizepage]
 
 % author    : Hans Hagen with Taco Hoekwater, Luigi Scarso & Hartmut Henkel
 % copyright : PRAGMA ADE & ConTeXt Development Team
