--- a/doc/context/sources/general/manuals/luatex/luatex-enhancements.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-enhancements.tex
@@ -111,12 +111,14 @@ problem for well|-|behaved input files, but it could create incompatibilities fo
 input that would have generated an error when processed by older \TEX|-|based
 engines. The affected commands with an altered initial (left of the equals sign)
 or secondary (right of the equals sign) value are: \type {\char}, \type
-{\lccode}, \type {\uccode}, \type {\catcode}, \type {\sfcode}, \type {\efcode},
-\type {\lpcode}, \type {\rpcode}, \type {\chardef}.
+{\lccode}, \type {\uccode}, \type {\hjcode}, \type {\catcode}, \type {\sfcode},
+\type {\efcode}, \type {\lpcode}, \type {\rpcode}, \type {\chardef}.
 
 As far as the core engine is concerned, all input and output to text files is
 \UTF-8 encoded. Input files can be pre|-|processed using the \type {reader}
-callback. This will be explained in a later chapter.
+callback. This will be explained in \in {section} [iocallback]. Normalization of
+the \UNICODE\ input is on purpose not built|-|in can be handled by a macro
+package during callback processing.
 
 Output in byte|-|sized chunks can be achieved by using characters just outside of
 the valid \UNICODE\ range, starting at the value $1{,}114{,}112$ (0x110000). When
@@ -129,8 +131,6 @@ are considered \quote {safe} and therefore printed as|-|is. You can disable
 escaping with \type {texio.setescape(false)} in which case you get the normal
 characters on the console.
 
-Normalization of the \UNICODE\ input can be handled by a macro package during
-callback processing (this will be explained in \in {section} [iocallback]).
 
 \subsection{\type {\Uchar}}
 
@@ -204,6 +204,34 @@ attributes for node list processing from \LUA\ is given in~\in {chapter}[nodes].
 Attributes are stored in a sorted (sparse) linked list that are shared when
 possible. This permits efficient testing and updating.
 
+\subsection{Nodes}
+
+When \TEX\ reads input it will interpret the stream according to the properties
+of the characters. Some signal a macro name and trigger expansion, others open
+and close groups, trigger math mode, etc. What's left over becomes the typeset
+text. Internally we get linked list of nodes. Characters become \type {glyph}
+nodes that have for instance a \type {font} and \type {char} property and \typ
+{\kern 10pt} becomes a \type {kern} node with a \type {width} property. Spaces
+are alien to \TEX\ as they are turned into \type {glue} nodes. So, a simple
+paragraph is mostly a mix of sequences of \type {glyph} nodes (words) and \type
+{glue} nodes (spaces).
+
+The sequences of characters at some point are extended with \type {disc} nodes
+that relate to hyphenation. After that font logic can be applied and we get a
+list where some characters can be replaced, for instance multiple characters can
+become one ligature, and font kerns can be injected. This is driven by the
+font properties.
+
+Boxes (like \type {\hbox} and \type {\vbox}) become \type {hlist} or \type
+{vlist} nodes with \type {width}, \type {height}, \type {depth} and \type {shift}
+properties and a pointer \type {list} to its actual content. Boxes can be
+constructed explicitly or can be the result of subprocesses. For instance, when
+lines are broken into paragraphs, the lines are a linked list of \type {hlist}
+nodes.
+
+We will see more of these nodes later on but for now that should be enough to be
+able to follow the rest oof this chapter.
+
 \subsection{Box attributes}
 
 Nodes typically receive the list of attributes that is in effect when they are
@@ -229,21 +257,53 @@ incompatibility is mostly due to the fact that separate specials and literals ar
 a more unnatural approach to colors than attributes.
 
 It is possible to fine-tune the list of attributes that are applied to a \type
-{hbox}, \type {vbox} or \type {vtop} by the use of the keyword \type {attr}. An
-example:
+{hbox}, \type {vbox} or \type {vtop} by the use of the keyword \type {attr}. The
+\type {attr} keyword(s) should come before a \type {to} or \type {spread}, if
+that is also specified. An example is:
 
-\starttyping
-\attribute2=5
+\startbuffer[tex]
+\attribute997=123
+\attribute998=456
 \setbox0=\hbox {Hello}
-\setbox2=\hbox attr1=12 attr2=-"7FFFFFFF{Hello}
-\stoptyping
+\setbox2=\hbox attr 999 = 789 attr 998 = -"7FFFFFFF{Hello}
+\stopbuffer
 
-This will set the attribute list of box~2 to $1=12$, and the attributes of box~0
-will be $2=5$. As you can see, assigning the maximum negative value causes an
-attribute to be ignored.
+\startbuffer[lua]
+  for b=0,2,2 do
+    for a=997, 999 do
+      tex.sprint("box ", b, " : attr ",a," : ",tostring(tex.box[b]     [a]))
+      tex.sprint("\\quad\\quad")
+      tex.sprint("list ",b, " : attr ",a," : ",tostring(tex.box[b].list[a]))
+      tex.sprint("\\par")
+    end
+  end
+\stopbuffer
 
-The \type {attr} keyword(s) should come before a \type {to} or \type {spread}, if
-that is also specified.
+\typebuffer[tex]
+
+Box 0 now has attributes 997 and 998 set while box 2 has attributes 997 and 999
+set while the nodes inside that box will all have attributes 997 and 998 set.
+Assigning the maximum negative value causes an attribute to be ignored.
+
+To give you an idea of what this means at the \LUA\ end, take the following
+code:
+
+\typebuffer[lua]
+
+Later we will see that you can access properties of a node. The boxes here are so
+called \type {hlist} nodes that have a field \type {list} that points to the
+content. Because the attributes are a list themselves you can access them by
+indexing the node (here we do that with \type {[a]}. Running this snippet gives:
+
+\start
+    \getbuffer[tex]
+    \startpacked \tt
+        \ctxluabuffer[lua]
+    \stoppacked
+\stop
+
+Because some values are not set we need to apply the \type {tostring} function
+here so that we get the word \type {nil}.
 
 \section{\LUA\ related primitives}
 
