--- a/doc/context/sources/general/manuals/luatex/luatex-math.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-math.tex
@@ -689,6 +689,36 @@ italics, while other fonts can lack kerns.
 Kerning between a character subscript is controlled by \type {\mathscriptcharmode}
 which also defaults to~1.
 
+Here is another example. Internally we tag kerns as italic kerns or font kerns
+where font kerns result from the staircase kern tables. In 2018 fonts like Latin
+Modern and Pagella rely on cheats with the boundingbox, Cambria uses staircase
+kerns and Lucida a mixture. Depending on how fonts evolve we might add some more
+control over what one can turn on and off.
+
+\def\MathSample#1#2#3%
+  {\NC
+   #1 \NC
+   #2 \NC
+   \showglyphdata \switchtobodyfont[#2,17.3pt]$#3T_{f}$         \NC
+   \showglyphdata \switchtobodyfont[#2,17.3pt]$#3\gamma_{e}$    \NC
+   \showglyphdata \switchtobodyfont[#2,17.3pt]$#3\gamma_{ee}$   \NC
+   \showglyphdata \switchtobodyfont[#2,17.3pt]$#3T_{\tf fluff}$ \NC
+   \NR}
+
+\starttabulate[|Tl|Tl|l|l|l|l|]
+    \FL
+    \MathSample{normal}{modern}  {\mr}
+    \MathSample{}      {pagella} {\mr}
+    \MathSample{}      {cambria} {\mr}
+    \MathSample{}      {lucidaot}{\mr}
+    \ML
+    \MathSample{bold}  {modern}  {\mb}
+    \MathSample{}      {pagella} {\mb}
+    \MathSample{}      {cambria} {\mb}
+    \MathSample{}      {lucidaot}{\mb}
+    \LL
+\stoptabulate
+
 \section{Unscaled fences}
 
 The \type {\mathdelimitersmode} primitive is experimental and deals with the
@@ -1342,6 +1372,20 @@ makes sense. As a bonus we also provide two extra penalties:
 
 They default to inifinite which signals that they don't need to be inserted. When
 set they are injected before a binop or rel noad. This is an experimental feature.
+
+\subsection{Equation spacing: \type {\matheqnogapstep}}
+
+By default \TEX\ will add one quad between the equation and the number. This is
+hard coded. A new primitive can control this:
+
+\startsyntax
+\matheqnogapstep = 1000
+\stopsyntax
+
+Because a math quad from the math text font is used instead of a dimension, we
+use a step to control the size. A value of zero will suppress the gap. The step
+is divided by 1000 which is the usual way to mimmick floating point factors in
+\TEX.
 
 \subsection {Tracing}
 
