--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -33,6 +33,8 @@
 
 % \setupsynctex[state=start,method=max] % adds 5 pct overhead
 
+% after adding primitives: context mult-prm.mkiv
+
 \environment luatex-style
 % \environment luatex-book
 \environment luatex-logos
@@ -79,5 +81,10 @@
     \component luatex-fontloader
     \component luatex-backend
 \stopbodymatter
+
+\startbackmatter
+    \component luatex-registers
+    \component luatex-statistics
+\stopbackmatter
 
 \stopdocument
