--- a/doc/context/sources/general/manuals/luatex/luatex-registers.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-registers.tex
@@ -2,19 +2,36 @@
 
 \startcomponent luatex-registers
 
-\startchapter[title=Primitives]
+\startchapter[title=Topics]
 
-This register contains the primitives that are mentioned in the manual. There are
-of course many more primitives. The \LUATEX\ primitives are typeset in bold. The
-primitives from \PDFTEX\ are not supported that way but mentioned anyway.
-
-\placeregister[primitiveindex][indicator=no]
+    \placeregister[topicindex]
 
 \stopchapter
 
-\startchapter[title=Topics]
+\startchapter[title=Primitives]
 
-\placeregister[topicindex]
+    This register contains the primitives that are mentioned in the manual. There
+    are of course many more primitives. The \LUATEX\ primitives are typeset in
+    bold. The primitives from \PDFTEX\ are not supported that way but mentioned
+    anyway.
+
+    \placeregister[primitiveindex][indicator=no]
+
+\stopchapter
+
+\startchapter[title=Callbacks]
+
+    \placeregister[callbackindex]
+
+\stopchapter
+
+\startchapter[title=Nodes]
+
+    This register contains the nodes that are known to \LUATEX. The primary nodes
+    are in bold, whatsits that are determined by their subtype are normal. The
+    names prefixed by \type {pdf_} are backend specific.
+
+    \placeregister[nodeindex]
 
 \stopchapter
 
