--- a/doc/context/sources/general/manuals/luatex/luatex.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex.tex
@@ -36,7 +36,7 @@
 % after adding primitives: context mult-prm.mkiv
 
 \environment luatex-style
-% \environment luatex-book
+\environment luatex-book
 \environment luatex-logos
 \environment luatex-private
 
